@@ -19,8 +19,8 @@ export(pnas_article)
 export(rjournal_article)
 export(rsos_article)
 export(rss_article)
+export(sage_article)
 export(sim_article)
-export(smmr_article)
 export(springer_article)
 importFrom(rmarkdown,includes_to_pandoc_args)
 importFrom(rmarkdown,knitr_options)
