@@ -1,5 +1,0 @@
-name: Statistics in Medicine Article
-description: >
- Template for creating an article for submission to Statistics in Medicine
-create_dir: true
-
