@@ -1,6 +1,8 @@
 rticles 0.5
 ---------------------------------------------------------------------
 
+- Added the template for the SAGE Journals (thanks, @oguzhanogreden).
+
 - Added the template for the IEEE Transaction Journals (thanks, @Emaasit, #97).
 
 - Added the PeerJ format (thanks, @zkamvar, #127).
